Sort in-flow positioned direct-child PaintLayers of flexboxes by order

Note: this does *not* sort grandchildren etc, because that would
require walking arbitrarily far up the layout tree to find ancestors
with `order` on them.

Bug: 606208

Change-Id: I4cda26584f66a42af50435d0e6c0e3711fd96fb1
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/4713588
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1175052}