third_party/blink/renderer/core/paint/paint_layer_stacking_node.cc
@@ -178,6 +178,45 @@ struct PaintLayerStackingNode::HighestLayers {
   }
 };
 
+static bool OrderLessThan(const PaintLayer* first, const PaintLayer* second) {
+  LayoutObject* parent = first->GetLayoutObject().Parent();
+  if (!parent ||
+      (!parent->IsLayoutNGFlexibleBox() && !parent->IsLayoutNGGrid())) {
+    return false;
+  }
+  if (parent != second->GetLayoutObject().Parent()) {
+    return false;
+  }
+  auto& first_style = first->GetLayoutObject().StyleRef();
+  auto& second_style = second->GetLayoutObject().StyleRef();
+  int first_order = 0;
+  int second_order = 0;
+  // Out of flow children paint as if order was 0:
+  // https://drafts.csswg.org/css-display-4/#order-modified-document-order
+  if (!first->GetLayoutObject().IsOutOfFlowPositioned()) {
+    first_order = first_style.Order();
+  }
+  if (!second->GetLayoutObject().IsOutOfFlowPositioned()) {
+    second_order = second_style.Order();
+  }
+  return first_order < second_order;
+}
+
+// Returns the children of |paint_layer|, sorted by the order CSS property
+// if they are the child of a flexbox. See:
+// https://www.w3.org/TR/css-flexbox-1/#painting
+static void GetOrderSortedChildren(
+    PaintLayer* paint_layer,
+    PaintLayerStackingNode::PaintLayers& sorted_children) {
+  for (PaintLayer* child = paint_layer->FirstChild(); child;
+       child = child->NextSibling()) {
+    sorted_children.push_back(child);
+  }
+
+  std::stable_sort(sorted_children.begin(), sorted_children.end(),
+                   OrderLessThan);
+}
+
 void PaintLayerStackingNode::RebuildZOrderLists() {
 #if DCHECK_IS_ON()
   DCHECK(layer_->LayerListMutationAllowed());
@@ -185,9 +224,11 @@ void PaintLayerStackingNode::RebuildZOrderLists() {
   DCHECK(z_order_lists_dirty_);
 
   layer_->SetNeedsReorderOverlayOverflowControls(false);
-  for (PaintLayer* child = layer_->FirstChild(); child;
-       child = child->NextSibling())
+  PaintLayers order_sorted_children;
+  GetOrderSortedChildren(layer_, order_sorted_children);
+  for (auto& child : order_sorted_children) {
     CollectLayers(*child, nullptr);
+  }
 
   // Sort the two lists.
   std::stable_sort(pos_z_order_list_.begin(), pos_z_order_list_.end(),
@@ -247,8 +288,9 @@ void PaintLayerStackingNode::CollectLayers(PaintLayer& paint_layer,
   if (has_overlay_overflow_controls || highest_layers)
     subtree_highest_layers.emplace();
 
-  for (PaintLayer* child = paint_layer.FirstChild(); child;
-       child = child->NextSibling()) {
+  PaintLayers order_sorted_children;
+  GetOrderSortedChildren(&paint_layer, order_sorted_children);
+  for (auto& child : order_sorted_children) {
     CollectLayers(*child, base::OptionalToPtr(subtree_highest_layers));
   }
 
@@ -285,10 +327,12 @@ bool PaintLayerStackingNode::StyleDidChange(PaintLayer& paint_layer,
   bool was_stacking_context = false;
   bool was_stacked = false;
   int old_z_index = 0;
+  int old_order = 0;
   if (old_style) {
     was_stacking_context =
         paint_layer.GetLayoutObject().IsStackingContext(*old_style);
     old_z_index = old_style->EffectiveZIndex();
+    old_order = old_style->Order();
     was_stacked = paint_layer.GetLayoutObject().IsStacked(*old_style);
   }
 
@@ -299,8 +343,10 @@ bool PaintLayerStackingNode::StyleDidChange(PaintLayer& paint_layer,
   bool should_be_stacked = paint_layer.GetLayoutObject().IsStacked();
   if (should_be_stacking_context == was_stacking_context &&
       was_stacked == should_be_stacked &&
-      old_z_index == new_style.EffectiveZIndex())
+      old_z_index == new_style.EffectiveZIndex() &&
+      old_order == new_style.Order()) {
     return false;
+  }
 
   paint_layer.DirtyStackingContextZOrderLists();
 
